Re-introduce assertion removed in r234890 https://bugs.webkit.org/show_bug.cgi?id=188611

Patch by Alex Christensen <achristensen@webkit.org> on 2018-08-16
Reviewed by Geoffrey Garen.

Source/WebCore:

The assertion was failing because Vector<String>::operator== was using memcmp,
which failed to consider different instances of equal Strings equal.  Added an
API test and this assertion, which now succeeds.

* contentextensions/ContentExtensionCompiler.cpp:
(WebCore::ContentExtensions::compileRuleList):

Source/WTF:

* wtf/text/WTFString.h:

Tools:

* TestWebKitAPI/Tests/WTF/Vector.cpp:
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/203723@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234943 268f45cc-cd09-0410-ab3c-d52691b4dbfc